fix VIDEOS not showing on the phone

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3217,7 +3217,8 @@ textarea.form-single {
     border-bottom: 6px solid #bababb;
     bottom: -6px; }
   .media-title {
-    font-size: 34px !important; }
+    font-size: 34px !important;
+    color: #9E002B }
   .media-title span::after {
     border-bottom: 6px solid #fff;
     bottom: -6px; }
